# adk-rust-python

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
docs/plans/: python-bindings-plan.md
python/adk_rust/: __init__.py  __init__.pyi
src/: agent.rs  artifact.rs  callbacks.rs  context.rs  error.rs  lib.rs  memory.rs  model.rs  runner.rs  session.rs  tool.rs  types.rs
src/agent/: CLAUDE.md  conditional.rs  custom.rs  llm.rs  mod.rs  workflow.rs
src/guardrail/: mod.rs
src/model/: CLAUDE.md  mod.rs
src/runner/: CLAUDE.md  mod.rs
src/session/: CLAUDE.md  mod.rs
src/tool/: CLAUDE.md  agent_tool.rs  builtin.rs  function.rs  mcp.rs  mod.rs
tests/: conftest.py  test_agents.py  test_artifacts.py  test_basic.py  test_callbacks.py  test_conditional.py  test_guardrails.py  test_memory.py  test_models.py  test_runner.py  test_session.py  test_tools.py  test_types.py
