[package]
name = "adk-rust-python"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
description = "Python bindings for ADK-Rust - Build AI agents in Python powered by Rust"

[lib]
name = "adk_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

adk-rust = { git = "https://github.com/zavora-ai/adk-rust", branch = "main", features = ["full"] }
adk-core = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }
adk-agent = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }
adk-model = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }
adk-tool = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }
adk-runner = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }
adk-session = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }
adk-memory = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }
adk-artifact = { git = "https://github.com/zavora-ai/adk-rust", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = "0.22"
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
chrono = "0.4"

[dev-dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }

[features]
default = ["all-providers"]
gemini = ["adk-model/gemini"]
openai = ["adk-model/openai"]
anthropic = ["adk-model/anthropic"]
deepseek = ["adk-model/deepseek"]
ollama = ["adk-model/ollama"]
groq = ["adk-model/groq"]
all-providers = ["gemini", "openai", "anthropic", "deepseek", "ollama", "groq"]

[profile.release]
lto = true
opt-level = 3
